@@ -1,4 +1,4 @@
-// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.vcs.impl.projectlevelman;
 
 import com.intellij.ide.impl.TrustedProjects;
@@ -17,6 +17,7 @@ import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.SystemInfo;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vcs.*;
+import com.intellij.openapi.vcs.ex.ProjectLevelVcsManagerEx;
 import com.intellij.openapi.vcs.impl.DefaultVcsRootPolicy;
 import com.intellij.openapi.vcs.impl.ProjectLevelVcsManagerImpl;
 import com.intellij.openapi.vcs.ui.VcsBalloonProblemNotifier;
@@ -46,7 +47,7 @@ public final class NewMappings implements Disposable {
   private static final Comparator<MappedRoot> ROOT_COMPARATOR = Comparator.comparing(it -> it.root.getPath());
   private static final Comparator<VcsDirectoryMapping> MAPPINGS_COMPARATOR = Comparator.comparing(VcsDirectoryMapping::getDirectory);
 
-  private final static Logger LOG = Logger.getInstance(NewMappings.class);
+  private static final Logger LOG = Logger.getInstance(NewMappings.class);
   private final Object myUpdateLock = new Object();
 
   private FileWatchRequestsManager myFileWatchRequestsManager;
@@ -54,14 +55,14 @@ public final class NewMappings implements Disposable {
   private final ProjectLevelVcsManager myVcsManager;
   private final Project myProject;
 
-  @NotNull private Disposable myFilePointerDisposable = Disposer.newDisposable();
+  private @NotNull Disposable myFilePointerDisposable = Disposer.newDisposable();
   private volatile List<VcsDirectoryMapping> myMappings = Collections.emptyList(); // sorted by MAPPINGS_COMPARATOR
   private volatile List<MappedRoot> myMappedRoots = Collections.emptyList(); // sorted by ROOT_COMPARATOR
   private volatile RootMapping myMappedRootsMapping = new RootMapping(Collections.emptyList());
   private volatile List<AbstractVcs> myActiveVcses = Collections.emptyList();
   private volatile boolean myActivated = false;
 
-  @NotNull private final MergingUpdateQueue myRootUpdateQueue;
+  private final @NotNull MergingUpdateQueue myRootUpdateQueue;
   private final VirtualFilePointerListener myFilePointerListener;
 
   public NewMappings(@NotNull Project project, @NotNull ProjectLevelVcsManagerImpl vcsManager) {
@@ -95,29 +96,38 @@ public final class NewMappings implements Disposable {
     return !myActiveVcses.isEmpty();
   }
 
+  public boolean isActivated() {
+    return myActivated;
+  }
+
   public void activateActiveVcses() {
     synchronized (myUpdateLock) {
       if (myActivated) return;
       myActivated = true;
       LOG.debug("activated");
     }
-    updateActiveVcses();
+    updateActiveVcses(true);
     updateMappedRoots(true);
   }
 
   /**
    * @return {@link #myActivated} value
    */
-  private boolean updateActiveVcses() {
+  private boolean updateActiveVcses(boolean forceFireEvent) {
     MyVcsActivator activator =
       ReadAction.compute(() -> {
         synchronized (myUpdateLock) {
           return myActivated ? createVcsActivator() : null;
         }
       });
+
     if (activator != null) {
-      activator.activate();
+      boolean wasChanged = activator.activate();
+      if (forceFireEvent || wasChanged) {
+        myProject.getMessageBus().syncPublisher(ProjectLevelVcsManagerEx.VCS_ACTIVATED).vcsesActivated(myActiveVcses);
+      }
     }
+
     return activator != null;
   }
 
@@ -142,7 +152,7 @@ public final class NewMappings implements Disposable {
   public void updateMappedVcsesImmediately() {
     LOG.debug("updateMappingsImmediately");
 
-    if (!updateActiveVcses()) return;
+    if (!updateActiveVcses(false)) return;
 
     synchronized (myUpdateLock) {
       Disposer.dispose(myFilePointerDisposable);
@@ -153,7 +163,7 @@ public final class NewMappings implements Disposable {
 
       dumpMappedRootsToLog();
     }
-    mappingsChanged();
+    notifyMappingsChanged();
 
     scheduleMappedRootsUpdate();
   }
@@ -167,11 +177,10 @@ public final class NewMappings implements Disposable {
     });
   }
 
-  private void updateVcsMappings(@NotNull Collection<? extends VcsDirectoryMapping> mappings) {
+  private void updateVcsMappings(@NotNull List<VcsDirectoryMapping> mappings) {
     myRootUpdateQueue.cancelAllUpdates();
 
-    List<VcsDirectoryMapping> newMappings = Collections
-      .unmodifiableList(ContainerUtil.sorted(removeDuplicates(mappings), MAPPINGS_COMPARATOR));
+    List<VcsDirectoryMapping> newMappings = List.copyOf(ContainerUtil.sorted(removeDuplicates(mappings), MAPPINGS_COMPARATOR));
     synchronized (myUpdateLock) {
       boolean mappingsChanged = !myMappings.equals(newMappings);
       if (!mappingsChanged) return; // mappings are up-to-date
@@ -181,11 +190,11 @@ public final class NewMappings implements Disposable {
       dumpMappingsToLog();
     }
 
-    updateActiveVcses();
+    updateActiveVcses(false);
 
     updateMappedRoots(false);
 
-    mappingsChanged();
+    notifyMappingsChanged();
   }
 
   private void updateMappedRoots(boolean fireMappingsChangedEvent) {
@@ -216,25 +225,26 @@ public final class NewMappings implements Disposable {
       }
     }
 
-    if (fireMappingsChangedEvent && mappedRootsChanged) mappingsChanged();
+    if (fireMappingsChangedEvent && mappedRootsChanged) notifyMappingsChanged();
   }
 
   private void refreshMainMenu() {
     ApplicationManager.getApplication().invokeLater(() -> {
       ProjectFrameHelper frame = WindowManagerEx.getInstanceEx().getFrameHelper(myProject);
-      if (frame != null && !Disposer.isDisposed(frame)) {
+      if (frame != null && frame.getRootPane() != null) {
         frame.updateView();
       }
     }, myProject.getDisposed());
   }
 
-  @NotNull
-  private static List<VcsDirectoryMapping> removeDuplicates(@NotNull Collection<? extends VcsDirectoryMapping> mappings) {
+  /**
+   * Take last mapping in collection in case of duplicates.
+   */
+  private static @NotNull List<VcsDirectoryMapping> removeDuplicates(@NotNull List<VcsDirectoryMapping> mappings) {
     List<VcsDirectoryMapping> newMapping = new ArrayList<>();
     Set<String> paths = new HashSet<>();
 
-    for (VcsDirectoryMapping mapping : ContainerUtil.reverse(new ArrayList<>(mappings))) {
-      // take last mapping in collection in case of duplicates
+    for (VcsDirectoryMapping mapping : ContainerUtil.reverse(mappings)) {
       if (paths.add(mapping.getDirectory())) {
         newMapping.add(mapping);
       }
@@ -242,8 +252,7 @@ public final class NewMappings implements Disposable {
     return newMapping;
   }
 
-  @NotNull
-  private Mappings collectMappedRoots(@NotNull List<VcsDirectoryMapping> mappings) {
+  private @NotNull Mappings collectMappedRoots(@NotNull List<VcsDirectoryMapping> mappings) {
     VirtualFilePointerManager pointerManager = VirtualFilePointerManager.getInstance();
 
     Map<VirtualFile, MappedRoot> mappedRoots = new HashMap<>();
@@ -319,8 +328,7 @@ public final class NewMappings implements Disposable {
     }
   }
 
-  @Nullable
-  private AbstractVcs getMappingsVcs(@NotNull VcsDirectoryMapping mapping) {
+  private @Nullable AbstractVcs getMappingsVcs(@NotNull VcsDirectoryMapping mapping) {
     return AllVcses.getInstance(myProject).getByName(mapping.getVcs());
   }
 
@@ -339,10 +347,9 @@ public final class NewMappings implements Disposable {
     }
   }
 
-  @NotNull
-  private Collection<VirtualFile> detectDefaultRootsFor(@NotNull AbstractVcs vcs,
-                                                        @NotNull Collection<VirtualFile> projectRoots,
-                                                        @NotNull Set<VirtualFile> mappedDirs) {
+  private @NotNull Collection<VirtualFile> detectDefaultRootsFor(@NotNull AbstractVcs vcs,
+                                                                 @NotNull Collection<VirtualFile> projectRoots,
+                                                                 @NotNull Set<VirtualFile> mappedDirs) {
     try {
       if (vcs.needsLegacyDefaultMappings()) return projectRoots;
 
@@ -407,7 +414,7 @@ public final class NewMappings implements Disposable {
     });
   }
 
-  public void mappingsChanged() {
+  public void notifyMappingsChanged() {
     BackgroundTaskUtil.syncPublisher(myProject, ProjectLevelVcsManager.VCS_CONFIGURATION_CHANGED).directoryMappingChanged();
     myFileWatchRequestsManager.ping();
   }
@@ -431,7 +438,7 @@ public final class NewMappings implements Disposable {
     }
   }
 
-  public void setDirectoryMappings(@NotNull List<? extends VcsDirectoryMapping> items) {
+  public void setDirectoryMappings(@NotNull List<VcsDirectoryMapping> items) {
     if (LOG.isDebugEnabled()) {
       LOG.debug("setDirectoryMappings, size: " + items.size(), new Throwable());
     }
@@ -439,17 +446,16 @@ public final class NewMappings implements Disposable {
     updateVcsMappings(items);
   }
 
-  @Nullable
-  public MappedRoot getMappedRootFor(@Nullable VirtualFile file) {
-    if (file == null || !file.isInLocalFileSystem()) return null;
-    if (myMappedRoots.isEmpty()) return null;
-    if (myVcsManager.isIgnored(file)) return null;
-
-    return myMappedRootsMapping.getRootFor(file);
+  public @Nullable MappedRoot getMappedRootFor(@Nullable VirtualFile file) {
+    if (file == null || !file.isInLocalFileSystem() || myMappedRoots.isEmpty() || myVcsManager.isIgnored(file)) {
+      return null;
+    }
+    else {
+      return myMappedRootsMapping.getRootFor(file);
+    }
   }
 
-  @Nullable
-  public MappedRoot getMappedRootFor(@Nullable FilePath file) {
+  public @Nullable MappedRoot getMappedRootFor(@Nullable FilePath file) {
     if (file == null || file.isNonLocal()) return null;
     if (myMappedRoots.isEmpty()) return null;
     if (myVcsManager.isIgnored(file)) return null;
@@ -457,8 +463,7 @@ public final class NewMappings implements Disposable {
     return myMappedRootsMapping.getRootFor(file);
   }
 
-  @NotNull
-  public List<VirtualFile> getMappingsAsFilesUnderVcs(@NotNull AbstractVcs vcs) {
+  public @NotNull List<VirtualFile> getMappingsAsFilesUnderVcs(@NotNull AbstractVcs vcs) {
     return ContainerUtil.mapNotNull(myMappedRoots, root -> {
       return vcs.equals(root.vcs) ? root.root : null;
     });
@@ -487,8 +492,7 @@ public final class NewMappings implements Disposable {
     return ContainerUtil.filter(myMappings, mapping -> Objects.equals(mapping.getVcs(), vcsName));
   }
 
-  @Nullable
-  public String haveDefaultMapping() {
+  public @Nullable String haveDefaultMapping() {
     VcsDirectoryMapping defaultMapping = ContainerUtil.find(myMappings, mapping -> mapping.isDefaultMapping());
     return defaultMapping != null ? defaultMapping.getVcs() : null;
   }
@@ -541,9 +545,11 @@ public final class NewMappings implements Disposable {
       else {
         AbstractVcs vcs = myVcsManager.findVcsByName(vcsName);
         if (vcs == null) {
-          VcsBalloonProblemNotifier.showOverChangesView(myProject,
-                                                        VcsBundle.message("impl.notification.content.vcs.plugin.not.found.for.mapping.to", vcsName),
-                                                        MessageType.ERROR);
+          VcsBalloonProblemNotifier.showOverChangesView(
+            myProject,
+            VcsBundle.message("impl.notification.content.vcs.plugin.not.found.for.mapping.to", vcsName),
+            MessageType.ERROR
+          );
           filteredMappings.addAll(mappings);
         }
         else {
@@ -555,14 +561,13 @@ public final class NewMappings implements Disposable {
     updateVcsMappings(filteredMappings);
   }
 
-  @NotNull
-  private MyVcsActivator createVcsActivator() {
-    Set<AbstractVcs> newVcses = !TrustedProjects.isTrusted(myProject)
-                                ? Collections.emptySet()
-                                : ContainerUtil.map2SetNotNull(myMappings, mapping -> getMappingsVcs(mapping));
+  private @NotNull MyVcsActivator createVcsActivator() {
+    Set<AbstractVcs> newVcses = TrustedProjects.isTrusted(myProject)
+                                ? ContainerUtil.map2SetNotNull(myMappings, this::getMappingsVcs)
+                                : Collections.emptySet();
 
     List<AbstractVcs> oldVcses = myActiveVcses;
-    myActiveVcses = Collections.unmodifiableList(new ArrayList<>(newVcses));
+    myActiveVcses = List.copyOf(newVcses);
 
     refreshMainMenu();
 
@@ -573,8 +578,8 @@ public final class NewMappings implements Disposable {
   }
 
   private static final class MyVcsActivator {
-    @NotNull private final Collection<? extends AbstractVcs> myAddVcses;
-    @NotNull private final Collection<? extends AbstractVcs> myRemoveVcses;
+    private final @NotNull Collection<? extends AbstractVcs> myAddVcses;
+    private final @NotNull Collection<? extends AbstractVcs> myRemoveVcses;
 
     private MyVcsActivator(@NotNull Collection<? extends AbstractVcs> addVcses,
                            @NotNull Collection<? extends AbstractVcs> removeVcses) {
@@ -582,7 +587,7 @@ public final class NewMappings implements Disposable {
       myRemoveVcses = removeVcses;
     }
 
-    public void activate() {
+    public boolean activate() {
       for (AbstractVcs vcs : myAddVcses) {
         try {
           vcs.doActivate();
@@ -599,6 +604,7 @@ public final class NewMappings implements Disposable {
           LOG.error(e);
         }
       }
+      return !myAddVcses.isEmpty() || !myRemoveVcses.isEmpty();
     }
   }
 
@@ -618,9 +624,9 @@ public final class NewMappings implements Disposable {
   }
 
   public static final class MappedRoot {
-    @Nullable public final AbstractVcs vcs;
-    @NotNull public final VcsDirectoryMapping mapping;
-    @NotNull public final VirtualFile root;
+    public final @Nullable AbstractVcs vcs;
+    public final @NotNull VcsDirectoryMapping mapping;
+    public final @NotNull VirtualFile root;
 
     private MappedRoot(@Nullable AbstractVcs vcs, @NotNull VcsDirectoryMapping mapping, @NotNull VirtualFile root) {
       this.vcs = vcs;
@@ -645,8 +651,8 @@ public final class NewMappings implements Disposable {
   }
 
   private static final class Mappings {
-    @NotNull public final List<MappedRoot> mappedRoots;
-    @NotNull public final Disposable filePointerDisposable;
+    public final @NotNull List<MappedRoot> mappedRoots;
+    public final @NotNull Disposable filePointerDisposable;
 
     private Mappings(@NotNull List<MappedRoot> mappedRoots, @NotNull Disposable filePointerDisposable) {
       this.mappedRoots = mappedRoots;
@@ -665,8 +671,7 @@ public final class NewMappings implements Disposable {
       }
     }
 
-    @Nullable
-    public MappedRoot getRootFor(@NotNull VirtualFile file) {
+    public @Nullable MappedRoot getRootFor(@NotNull VirtualFile file) {
       while (file != null) {
         MappedRoot root = myVFMap.get(file);
         if (root != null) return root;
@@ -675,8 +680,7 @@ public final class NewMappings implements Disposable {
       return null;
     }
 
-    @Nullable
-    public MappedRoot getRootFor(@NotNull FilePath filePath) {
+    public @Nullable MappedRoot getRootFor(@NotNull FilePath filePath) {
       return myPathMapping.getMappingFor(filePath.getPath());
     }
   }
